<resources>
    <string name="app_name">Calculadora Salário Líquido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calcular_salario">Calculadora salário líquido</string>
    <string name="intrucoes">Calcule o seu salário líquido e entenda as tributações que são cobradas no seu salário.</string>
    <string name="salario">Salário bruto</string>
    <string name="outros">Outros descontos</string>
    <string name="calcular">Calcular</string>
    <string name="bruto_1">Salário bruto:</string>
    <string name="desconto">Descontos:</string>
    <string name="total">Total:</string>
    <string name="inss">(INSS)</string>
    <string name="irpf">(IRPF)</string>
    <string name="total_descontado">(Desconto Total)</string>
    <string name="total_descontado_liquido">(Líquido)</string>
    <string name="depentendes_info">Dependentes</string>
    <string name="outros_descontos">(Outros descontos)</string>
    <string name="duvidas">Dúvidas Frequêntes</string>
    <string name="duvidas_1">O que é IRPF?</string>
    <string name="appID">ca-app-pub-8817634033676287~4757001416</string>
    <string name="pubIntersticial">ca-app-pub-8817634033676287/3640743757</string>
    <string name="pubNative">ca-app-pub-8817634033676287/5471317282</string>
    <string name="pubNativeTest">ca-app-pub-3940256099942544/2247696110</string>
    <string name="title_activity_ads">Leanback ADS</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="instroducao">Este app serve para você entender os descontos que ocorrem no seu salário. Ajuda a entender para onde vaí cada parte descontada do seu salário para que você não tenha supresas ou identifique erros.</string>
    <string name="paragrafo_1">Alguns dos descontos mais comuns que ocorrem no seu salário são:</string>
    <string name="paragrafo_3">O IRPF (Imposto de renda) é um imposto federal que incide sobre o seu salário. Esse imposto é obrigatório e pode ser isento em alguns casos. Mas para isso, você deve declarar os seus impostos para ter a restituição de parte do imposto já pago.</string>
    <string name="paragrafo_5">O INSS (Instituto Nacional do Seguro Social) é um orgão reponsavel em pagar benefícios e aposentadorias aos trabalhadores. É descontado um valor mensal do salário para que o programa seja mantido. Quanto maior a sua contribuição ao INSS, maior será a sua aposentadoria.</string>
    <string name="facebook_app_id">865231098213498</string>
    <string name="app_key">76b7d6442b5c2e845cfd886c35d2c1bff9e5e69490f89d07</string>
</resources>