<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.duvidas.DuvidasFrequentes">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.duvidas.DuvidasFrequentes">

        <TextView
            android:id="@+id/titulo_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/duvidas"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/introducao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12.5dp"
            android:layout_marginVertical="25dp"
            android:text="@string/instroducao"
            app:layout_constraintTop_toBottomOf="@id/titulo_1" />

        <TextView
            android:id="@+id/paragrafo_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12.5dp"
            android:layout_marginVertical="25dp"
            android:text="@string/paragrafo_1"
            app:layout_constraintTop_toBottomOf="@+id/introducao" />

        <TextView
            android:id="@+id/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12.5dp"
            android:layout_marginVertical="10dp"
            android:text="• INSS"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paragrafo_1" />

        <TextView
            android:id="@+id/list_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12.5dp"
            android:layout_marginVertical="10dp"
            android:text="• IRPF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list" />

        <TextView
            android:id="@+id/paragrafo_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/duvidas_1"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/list_2" />

        <TextView
            android:id="@+id/paragrafo_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12.5dp"
            android:layout_marginVertical="25dp"
            android:text="@string/paragrafo_3"
            app:layout_constraintTop_toBottomOf="@+id/paragrafo_2" />

        <TextView
            android:id="@+id/paragrafo_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="O que é INSS?"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paragrafo_3" />

        <TextView
            android:id="@+id/paragrafo_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12.5dp"
            android:layout_marginVertical="25dp"
            android:text="@string/paragrafo_5"
            app:layout_constraintTop_toBottomOf="@+id/paragrafo_4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
