<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.salarioCalculado.salarioCalculado">

    <TextView
        android:id="@+id/bruto_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bruto_1"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/bruto_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:textSize="15dp"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bruto_2" />
    <TextView
        android:id="@+id/desconto_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/desconto"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/bruto_1"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/desconto_irpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:textSize="15dp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/desconto_2"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/info_irpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/irpf"
        android:layout_marginEnd="25dp"
        android:textSize="15dp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/desconto_2"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/desconto_inss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:textSize="15dp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/desconto_irpf"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/info_inss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inss"
        android:layout_marginEnd="25dp"
        android:textSize="15dp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/info_irpf"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/outros_descontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:textSize="15dp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/info_inss"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/outros_descontos_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outros_descontos"
        android:layout_marginEnd="25dp"
        android:textSize="15dp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/info_inss"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/total"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/outros_descontos"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/total_desconto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:textSize="15dp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/total_desconto_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:textSize="15dp"
        android:text="@string/total_descontado"
        android:textColor="@color/red"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/total_liquido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:textSize="15dp"
        android:textColor="@color/dinheiro_escuro"
        app:layout_constraintTop_toBottomOf="@id/total_desconto_info"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/total_liquido_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:textSize="15dp"
        android:text="@string/total_descontado_liquido"
        android:textColor="@color/dinheiro_escuro"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/total_desconto_info"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.appodeal.ads.native_ad.views.NativeAdViewAppWall
        android:id="@+id/native_ad_view_app_wall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="30dp"
        app:gnt_template_type="@layout/gnt_medium_template_view"
        app:layout_constraintTop_toBottomOf="@id/total_liquido_info"
        app:layout_constraintBottom_toBottomOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>