<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculadora.Calculadora">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/salario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salario"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/salario_bruto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/outros"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salario"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desconto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dependentes_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/depentendes_info"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outros"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dependentes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/dependentes_input"
        />


    <com.appodeal.ads.native_ad.views.NativeAdViewAppWall
        android:id="@+id/native_ad_view_app_wall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="30dp"
        app:gnt_template_type="@layout/gnt_medium_template_view"
        app:layout_constraintTop_toBottomOf="@id/calcular"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>